misp-module.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: misp-modules
spec:
  replicas: 1
  selector:
    matchLabels:
      app: misp-modules
  template:
    metadata:
      labels:
        app: misp-modules
    spec:
      containers:
      - name: misp-modules
        image: ghcr.io/misp/misp-docker/misp-modules:latest
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          periodSeconds: 2
