misp-core.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: misp-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: misp-core
  template:
    metadata:
      labels:
        app: misp-core
    spec:
      containers:
      - name: misp-core
        image: ghcr.io/misp/misp-docker/misp-core:latest
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: config-volume
          mountPath: /var/www/MISP/app/Config/
        - name: logs-volume
          mountPath: /var/www/MISP/app/tmp/logs/
        - name: files-volume
          mountPath: /var/www/MISP/app/files/
        - name: ssl-volume
          mountPath: /etc/nginx/certs/
        - name: gnupg-volume
          mountPath: /var/www/MISP/.gnupg/
      volumes:
      - name: config-volume
        emptyDir: {}
      - name: logs-volume
        emptyDir: {}
      - name: files-volume
        emptyDir: {}
      - name: ssl-volume
        emptyDir: {}
      - name: gnupg-volume
        emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: misp-core
spec:
  selector:
    app: misp-core
  ports:
    - protocol: TCP
      port: 80
      name: insecure
      targetPort: 80
    - protocol: TCP
      port: 443
      name: secure
      targetPort: 443
