misp-modules.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: misp-modules
spec:
  replicas: 1
  selector:
    matchLabels:
      app: misp-modules
  template:
    metadata:
      labels:
        app: misp-modules
    spec:
      containers:
        - name: misp-modules
          image: ghcr.io/misp/misp-docker/misp-modules:latest
          ports:
            - containerPort: 6666

---
apiVersion: v1
kind: Service
metadata:
  name: misp-modules
spec:
  selector:
    app: misp-modules
  ports:
    - protocol: TCP
      port: 6666
      targetPort: 6666
